--- a/resume_page/templates/home.html
+++ b/resume_page/templates/home.html
@@ -46,7 +46,7 @@
 				</div>
 				
 				<div class="sectionContent">
-					<p>Elizabeth Eli is a Legal practitioner and an upcoming Backend Developer interning at HNGi8 2021. </p>
+					<p>Elizabeth Eli is a Legal practitioner and a Backend Developer. She seeks to merge the Law and technology to solve germane issues  plaguing the society. </p>
 				</div>
 			</article>
 			
@@ -64,8 +64,8 @@
 					<h2>ZURI-TRAINING/INTERNSHIP</h2>
 					<p class="subDetails">February 2021  - July 2021</p>
                     <p class="subDetails"><a href="https://training.zuri.team/ " target="new">Zuri</a></p>
-					<p>A 4-month Virtual training program  with over 10,000 students learning to code, design, build mobile application and more.
-                        The program is aimed at getting you started in the Tech industry.</p>
+					<p> I attended  this 4-month Virtual training program   where i learnt how to   build  some project using the Python programming .
+                        During the training i built some blogs and applications .</p>
 				</article>
 				<br/>
 				
@@ -77,27 +77,28 @@
 		
 		<section>
 			<div class="sectionTitle">
-				<h1>Codes Written</h1>
+				<h1>PROJECTS BUILT</h1>
 			</div>
 			
 			<div class="sectionContent">
 				<article>
 					<h2>CRUD-DJANGO-APPLICATION</h2>
 					<p class="subDetails"><a href="https://github.com/Duvie728/CRUD-DJANGO-APPLICATION " target="new">Blog</a></p>
-					<p>Building a blog site using python and Django. </p>
+					<p>I built a blog site using python and Django. </p>
 					
 				</article>
 				<br/>
 				<article>
 					<h2>Kidvacc project</h2>
 					<p class="subDetails"><a href=" https://github.com/Duvie728/kidvacc-be-pjt-37" target="new">KIDVACC</a></p>
-					<p> This project was built using Django restframework and hosted on heroku. This is an application that solves the issues of vaccination for parents.  A well as linking parents to their choice of hospital for the vaccination of their Ward/Children. </p>
+					<p> I used Django restframework to build the API for this project and hosted on heroku.
+						 This is an application that solves the issues of vaccination for parents.  A well as linking parents to their choice of hospital for the vaccination of their Ward/Children. </p>
 				</article>
 				<br/>
 				<article>
 					<h2>ATM TASK </h2>
 					<p class="subDetails"><a href=" https://github.com/Duvie728/PYTHON-LOOPS-AND-FUNCTION" target="new">Atm task</a></p>
-					<p>This was a task on python loop and function. we were were required to build a simple atm  machine function</p>
+					<p>I built a simple atm  machine function using python. </p>
 				</article>
 				<br/>
 				<article>
@@ -114,7 +115,7 @@
 			
 			<div class="sectionContent">
 				<ul class="keySkills">
-					<li>Python/Django</li>
+					<li></li>
 					<li>Legal Analysis</li>
 					<li>Communication</li>
 				</ul>
@@ -130,16 +131,16 @@
 			
 			<div class="sectionContent">
 				<article>
-					<h2>Rivers State University in Nigeria</h2>
-					<p class="subDetails">LLB (Honors)</p>
-                </article>
-
-                    <br/>
-                <article>
                     <h2>NIGERIAN LAW SCHOOL</h2>
                     <p class="subDetails">BL </p>
 						
 				</article>
+				
+                    <br/>
+					<article>
+						<h2>Rivers State University in Nigeria</h2>
+						<p class="subDetails">LLB (Honors)</p>
+					</article>
 
                     <br/>  
                 <article>
